High number of cache miss on localTimeOffset https://bugs.webkit.org/show_bug.cgi?id=200444

Reviewed by Darin Adler.

This patch is separating the `LocalTimeOffsetCache` for each
`WTF::TimeType` to avoid constant cache miss on pathological cases
where `gregorianDateTimeToMS` and `msToGregorianDateTime` are
intercaleted with `inputTimeType ==  WTF::LocalTime`. Such case
happens during execution of Facebook Messenger
(https://www.messenger.com).

* runtime/JSDateMath.cpp:
(JSC::localTimeOffset):
(JSC::gregorianDateTimeToMS):
* runtime/VM.cpp:
(JSC::VM::resetDateCache):
* runtime/VM.h:
(JSC::LocalTimeOffsetCache::LocalTimeOffsetCache):
(JSC::LocalTimeOffsetCache::reset):


Canonical link: https://commits.webkit.org/214268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248363 268f45cc-cd09-0410-ab3c-d52691b4dbfc